--- a/client/src/App.css
+++ b/client/src/App.css
@@ -148,6 +148,21 @@ background-color: lightgrey;
   min-height: 400px;
   color: white;
 }
+.bg-image-overlay4 {
+  background-image: linear-gradient(rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url('./assets/construction4.jpg');
+  background-size: cover;
+  background-position: center;
+  min-height: 400px;
+  color: white;
+}
+
+.bg-image-overlay5 {
+  background-image: linear-gradient(rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url('./assets/construction5.png');
+  background-size: cover;
+  background-position: center;
+  min-height: 400px;
+  color: white;
+}
 
 .image-container {
   position: relative;
